--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
             </head>
 <body>
 
-<iframe src="https://calendar.google.com/calendar/embed?src=jtpheocc6m496r7j0sfsmlmrednr77aq%40import.calendar.google.com&ctz=Europe%2FLondon" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+<iframe src="https://calendar.google.com/calendar/embed?height=500&wkst=2&bgcolor=%23F4511E&ctz=Europe%2FLondon&mode=WEEK&showNav=0&showPrint=0&showTabs=1&showCalendars=0&showTz=0&src=cTZ2MWh2YjQ0dDQ1aXA5cmUybmdtN2s0ODVmbWFzYmpAaW1wb3J0LmNhbGVuZGFyLmdvb2dsZS5jb20&color=%23795548" style="border:solid 1px #777" width="400" height="500" frameborder="0" scrolling="no"></iframe>   
+      
 </body>
 </html>            
       
